--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,48 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* body{
+    background-color: #fff ;
+    color: black;
+} */
+
+.wrapper{
+    margin: 0 20px;
+}
+.linkBtn{
+    border-bottom: 1px solid #eef1f6;
+}
+/* .linkBtn:hover{
+    background-color: #eef1f6;
+} */
+
+.callBtn:hover{
+    background: #2F80ED;
+    color: white;
+}
+.orderBtn:hover{
+    background: #000;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.bottomSlice{
+    position: absolute;
+    width: 80%;
+    height: 2px;
+    bottom: 0;
+    left: -100%;
+    border-radius: 20px;
+    background: #2f80ed;
+    transition: 0.5s all;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.navLink:hover .bottomSlice{
+    left: 0;
+}
+.navLink:active, .navLink:focus .bottomSlice{
+    left: 0;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
