--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,44 +5,146 @@
     color: black;
 } */
 
-.wrapper{
-    margin: 0 20px;
+.wrapper {
+	margin: 0 20px;
 }
-.linkBtn{
-    border-bottom: 1px solid #eef1f6;
+
+.linkBtn {
+	border-bottom: 1px solid #eef1f6;
 }
+
 /* .linkBtn:hover{
     background-color: #eef1f6;
 } */
 
-.callBtn:hover{
-    background: #2F80ED;
-    color: white;
-}
-.orderBtn:hover{
-    background: #000;
+.callBtn:hover {
+	background: #2F80ED;
+	color: white;
 }
 
-.bottomSlice{
-    position: absolute;
-    width: 80%;
-    height: 2px;
-    bottom: 0;
-    left: -100%;
-    border-radius: 20px;
-    background: #2f80ed;
-    transition: 0.5s all;
+.orderBtn:hover {
+	background: #000;
 }
 
-.navLink:hover .bottomSlice{
-    left: 0;
+.bottomSlice {
+	position: absolute;
+	width: 80%;
+	height: 2px;
+	bottom: 0;
+	left: -100%;
+	border-radius: 20px;
+	background: #2f80ed;
+	transition: 0.5s all;
 }
-.navLink:active, .navLink:focus .bottomSlice{
-    left: 0;
+
+.navLink:hover .bottomSlice {
+	left: 0;
+}
+
+.navLink:active,
+.navLink:focus .bottomSlice {
+	left: 0;
 }
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+
+
+.carder {
+	position: relative;
+	overflow: hidden;
+}
+
+.carder span:nth-child(1) {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 1px;
+	background: linear-gradient(to right, #2f80ed, #7DB0F4);
+	animation: animate1 2s linear infinite;
+}
+
+@keyframes animate1 {
+	0% {
+		transform: translateX(-100%);
+	}
+
+	100% {
+		transform: translateX(100%);
+	}
+}
+
+.carder span:nth-child(2) {
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 100%;
+	width: 1px;
+	background: linear-gradient(to bottom, #7DB0F4, #7DB0F4);
+	animation: animate2 2s linear infinite;
+	animation-delay: 1s;
+}
+
+@keyframes animate2 {
+	0% {
+		transform: translateY(-100%);
+	}
+
+	100% {
+		transform: translateY(100%);
+	}
+}
+
+.carder span:nth-child(3) {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	height: 1px;
+	background: linear-gradient(to left, #2f80ed, #7DB0F4);
+	animation: animate3 2s linear infinite;
+}
+
+@keyframes animate3 {
+	0% {
+		transform: translateX(100%);
+	}
+
+	100% {
+		transform: translateX(-100%);
+	}
+}
+
+.carder span:nth-child(4) {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 1px;
+	background: linear-gradient(to top, #171618, #7DB0F4);
+	animation: animate4 2s linear infinite;
+	animation-delay: 1s;
+}
+
+@keyframes animate4 {
+	0% {
+		transform: translateY(100%);
+	}
+
+	100% {
+		transform: translateY(-100%);
+	}
+}
+
+.card_title {
+	display: -webkit-box;
+	-webkit-line-clamp: 3; /* 3 qatorgacha ko‘rsatadi */
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+  
 }
